# News-analyzer

./: .pre-commit-config.yaml  Makefile  README.md  platzi_news.prof  pyproject.toml  timeit_test.py
.github/workflows/: main.yml
src/platzi_news/: config.py
src/platzi_news/analysis/: analyzer.py
src/platzi_news/core/: services.py
src/platzi_news/io/: cli.py
src/platzi_news/sources/: guardian.py  newsapi.py
tests/: test_analyzer.py  test_cli.py  test_exceptions.py  test_news_sources.py
